--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -45,7 +45,7 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
                         <div class="white-box text-center">
-                            <img th:src="*{pictures[0]}" class="img-responsive" style="height: 225px; width: 100%; display: block;">
+                            <img th:src="*{picture}" class="img-responsive" style="height: 225px; width: 100%; display: block;">
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
