--- a/src/main/resources/templates/editOffer.html
+++ b/src/main/resources/templates/editOffer.html
@@ -116,21 +116,21 @@
                                         </label>
                                         <input name="pictures" class="form-control" type="file"
                                                id="formFile" multiple required
-                                               th:field="*{pictures}" th:errorclass="is-invalid"
+                                               th:field="*{picture}" th:errorclass="is-invalid"
                                         >
                                         <div class="error"
-                                             th:text="${#strings.listJoin(#fields.errors('pictures'), '; ')}"></div>
+                                             th:text="${#strings.listJoin(#fields.errors('picture'), '; ')}"></div>
                                     </div>
 
                                     <table class="form-group" id="image-container">
                                         <thead>
                                         <tr>
-                                            <th>Files Uploaded(At least 1 is needed):</th>
+                                            <th>Files Uploaded(1 picture required):</th>
                                         </tr>
                                         </thead>
                                         <tbody>
-                                        <tr th:each="picture : *{pictures}">
-                                            <th th:text="${picture}"></th>
+                                        <tr>
+                                            <th th:text="*{picture}"></th>
                                         </tr>
                                         </tbody>
                                     </table>
