--- a/src/main/resources/templates/catalog.html
+++ b/src/main/resources/templates/catalog.html
@@ -92,14 +92,11 @@
             </div>
 
             <div class="modal-body no-border">
-                <form action="javascript:void(0)" th:method="get" id="place_order_form">
-                </form>
-
                 <div class="modal-footer no-border">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal" id="returnBtn">
                         Return
                     </button>
-                    <button type="submit" class="btn btn-primary" id="continueBtn" form="place_order_form">
+                    <button class="btn btn-primary" id="continueBtn">
                         Yes, continue
                     </button>
                 </div>
