--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -22,6 +22,7 @@
     <script src="https://kit.fontawesome.com/b18db754f0.js" crossorigin="anonymous"></script>
 
     <script th:src="@{/js/sidebar.js}" type="module"></script>
+    <script th:src="@{/js/deleteDeck.js}" type="module"></script>
     <link rel="stylesheet" th:href="@{/css/productDetails.css}"/>
 
     <th:block th:replace="~{/fragments/head.html}"></th:block>
@@ -34,6 +35,37 @@
     </nav>
 </header>
 
+<article class="modal fade" id="consentModal" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header no-border">
+                <h5 class="modal-title" id="consentModalTitle">
+                    Are you sure you want to continue?
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeConsentModalBtn">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body no-border">
+
+                <div class="modal-footer no-border">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="returnBtn">
+                        Return
+                    </button>
+                    <button class="btn btn-primary" id="continueBtn">
+                        Yes, continue
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</article>
+
 <th:block th:replace="~{/fragments/sidebar.html}"></th:block>
 
 <main>
@@ -45,7 +77,8 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-6 image-cont">
                         <div class="white-box text-center">
-                            <img th:src="*{picture}" class="img-responsive" style="height: 225px; width: 100%; display: block;">
+                            <img th:src="*{picture}" class="img-responsive"
+                                 style="height: 225px; width: 100%; display: block;">
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-6 description-details">
@@ -59,6 +92,16 @@
 
                             <i class="fa-solid fa-heart"></i>
                         </button>
+                        <span sec:authorize="hasRole('ADMIN')" id="admin-panel">
+                            <a type="button"
+                               class="btn btn-sm btn-outline-secondary cardBtn editBtn"
+                               th:href="@{/decks/{deckId}/edit (deckId=*{id})}">Edit</a>
+                            <a type="button"
+                               class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
+                               data-toggle="modal" data-target="#consentModal"
+                               th:id="|delete-*{title}|"
+                               href="javascript:void(0)">Delete</a>
+                        </span>
                     </div>
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <h3 class="box-title mt-5">General Info</h3>
@@ -110,20 +153,20 @@
 
 <script th:inline="javascript">
 
-    const likeBtn=document.querySelector(".heart-btn");
+    const likeBtn = document.querySelector(".heart-btn");
     const csrfHeaderName = document.head.querySelector('[name=_csrf_header]').content;
     const csrfHeaderValue = document.head.querySelector('[name=_csrf]').content;
 
     likeBtn.addEventListener("click", like);
 
-    async function like(ev){
-        if(likeBtn.classList.contains("liked")){
+    async function like(ev) {
+        if (likeBtn.classList.contains("liked")) {
             await dislike(ev)
             return;
         }
         ev.preventDefault();
 
-        const options={
+        const options = {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json',
@@ -140,10 +183,10 @@
         likeBtn.classList.add("liked");
     }
 
-    async function dislike(ev){
+    async function dislike(ev) {
         ev.preventDefault();
 
-        const options={
+        const options = {
             method: 'DELETE',
             headers: {
                 'Content-Type': 'application/json',
