--- a/src/main/resources/templates/offers.html
+++ b/src/main/resources/templates/offers.html
@@ -77,6 +77,37 @@
     </div>
 </article>
 
+<article class="modal fade" id="consentModal" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header no-border">
+                <h5 class="modal-title" id="consentModalTitle">
+                    Are you sure you want to continue?
+                </h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close" id="closeConsentModalBtn">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+
+            <div class="modal-body no-border">
+
+                <div class="modal-footer no-border">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal" id="returnBtn">
+                        Return
+                    </button>
+                    <button class="btn btn-primary" id="continueBtn">
+                        Yes, continue
+                    </button>
+                </div>
+            </div>
+
+
+        </div>
+    </div>
+</article>
+
 <!--Sidebar-->
 
 <th:block th:replace="~{/fragments/sidebar.html}"/>
@@ -110,10 +141,12 @@
                                         <span sec:authorize="hasRole('ADMIN')">
                                             <a type="button"
                                                class="btn btn-sm btn-outline-secondary cardBtn editBtn"
-                                               th:href="@{/offers/edit/{offerId} (offerId=*{id})}">Edit</a>
+                                               th:href="@{/offers/{offerId}/edit (offerId=*{id})}">Edit</a>
                                             <a type="button"
                                                class="btn btn-sm btn-outline-secondary cardBtn deleteBtn"
-                                               th:href="@{/offers/delete/{offerId} (offerId=*{id})}">Delete</a>
+                                               data-toggle="modal" data-target="#consentModal"
+                                               th:id="|delete-*{id}|"
+                                               href="javascript:void(0)">Delete</a>
                                         </span>
                                     </div>
                                 </div>
@@ -130,6 +163,10 @@
 
 </body>
 
+
+
+<script th:src="@{/js/deleteOffer.js}" type="module"></script>
+<script th:src="@{/js/deleteOffer.js}"></script>
 <script th:src="@{/js/backToTop.js}"></script>
 <script th:src="@{/js/searchbar.js}"></script>
 <script th:src="@{/js/sidebar.js}"></script>
