--- a/src/main/resources/templates/deckDetails.html
+++ b/src/main/resources/templates/deckDetails.html
@@ -85,13 +85,15 @@
                         <h4 class="box-title mt-5">Product description</h4>
                         <p th:text="*{description}"></p>
 
-                        <button class="btn btn-dark btn-rounded mr-1 heart-btn"
-                                th:classappend="*{liked} ? 'liked' : ''"
-                                data-toggle="tooltip" title=""
-                                data-original-title="Add to cart">
+                        <th:block sec:authorize="!hasRole('ROLE_ADMIN')">
+                            <button class="btn btn-dark btn-rounded mr-1 heart-btn"
+                                    th:classappend="*{liked} ? 'liked' : ''"
+                                    data-toggle="tooltip" title=""
+                                    data-original-title="Add to cart">
 
-                            <i class="fa-solid fa-heart"></i>
-                        </button>
+                                <i class="fa-solid fa-heart"></i>
+                            </button>
+                        </th:block>
                         <span sec:authorize="hasRole('ADMIN')" id="admin-panel">
                             <a type="button"
                                class="btn btn-sm btn-outline-secondary cardBtn editBtn"
@@ -138,7 +140,7 @@
                                 </tr>
                                 <tr>
                                     <td>Offers</td>
-                                    <td><a th:href="@{/decks/search/{name} (name=*{title})}"></a></td>
+                                    <td><a th:href="@{/offers/all (search=*{title})}">See all offers here</a></td>
                                 </tr>
                                 </tbody>
                             </table>
