--- a/src/main/resources/templates/errors/no-cart-products.html
+++ b/src/main/resources/templates/errors/no-cart-products.html
@@ -34,12 +34,12 @@
 <main>
     <div class="d-flex align-items-center justify-content-center vh-80">
         <div class="text-center">
-            <h1 class="display-1 fw-bold">404</h1>
-            <p class="fs-3"><span class="text-danger">Opps!</span> Page not found.</p>
-            <p class="lead">
+            <h1 class="display-1 fw-bold">400</h1>
+            <p class="fs-3"><span class="text-danger">Opps!</span> Something went wrong</p>
+            <p class="lead" th:text="${warning}">
                 The page you’re looking for doesn’t exist.
             </p>
-            <a th:href="@{/}" class="btn btn-primary">Go Home</a>
+            <a th:href="@{/cart}" class="btn btn-primary">Go To Cart</a>
         </div>
     </div>
 </main>
