--- a/src/main/resources/static/css/orders.css
+++ b/src/main/resources/static/css/orders.css
@@ -27,3 +27,10 @@ tbody>tr:hover{
     cursor: pointer;
     background-color: rgb(227, 224, 224);
 }
+tr{
+    border: none;
+}
+
+.contents:hover, .seller:hover{
+    color: var(--dark-blue);
+}
