--- a/src/main/resources/templates/error/400.html
+++ b/src/main/resources/templates/error/400.html
@@ -34,11 +34,10 @@
 <main>
     <div class="d-flex align-items-center justify-content-center vh-80">
         <div class="text-center">
-            <h1 class="display-1 fw-bold">404</h1>
-            <p class="fs-3"><span class="text-danger">Opps!</span> Page not found.</p>
-            <p class="lead" th:if="${reason}!=null" th:text="|The ${reason} you are searching for does not exist|"></p>
-            <p class="lead" th:if="${reason}==null">
-                The page you’re looking for does not exist.
+            <h1 class="display-1 fw-bold">400</h1>
+            <p class="fs-3"><span class="text-danger">Opps!</span> Bad request.</p>
+            <p class="lead">
+                Could not process your request. Please try something else.
             </p>
             <a th:href="@{/}" class="btn btn-primary">Go Home</a>
         </div>
